# sacabench

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CMakeLists.txt  LICENCE  LICENSE  README.md  cli-example.ini  install-manpages.sh  make_all.sh
bigtest/: CMakeLists.txt  bigtest.cpp.in  bigtest_driver.cpp  bigtest_driver.hpp  register.cpp.in
cmakemodules/: git_submodule_subdirectories.cmake
cuda/: CMakeLists.txt  Prefix_Sum_Benchmark.cu  Testing.cu  check_for_gpu.cu  check_for_gpu_interface.hpp  cuda_util.cu  cuda_util.cuh  cuda_wrapper.cu  cuda_wrapper_interface.hpp  mark_singletons.cu  osipov_gpu.hpp  prefix_doubler.cu  prefix_doubler_interface.hpp  tuple_creation.cu  tuple_creation_interface.hpp
cuda/cub-1.8.0/: benchmark  common.mk
cuda/cub-1.8.0/examples/device/: Makefile
par_experiments/: prefix_sum.cpp
sacabench/: CMakeLists.txt  sacabench-tools.cpp  sacabench.cpp
sacabench/saca/: .gsaca_ref_wrapper.hpp.swp  bucket_pointer_refinement.hpp  bucket_pointer_refinement_parallel.hpp  dc3.hpp  dc3_lite.hpp  dc3_lite_par.hpp  dc3_par.hpp  dc3_par2.hpp  dc3_parallel.hpp  dc7.hpp  deep_shallow.hpp  divsufsort.hpp  example1.cpp  example1.hpp  example2.cpp  example2.hpp  gsaca.hpp  gsaca_helper.hpp  gsaca_ref_wrapper.hpp  gsize.hpp  m_suf_sort.hpp  m_suf_sort_par.hpp  m_suf_sort_scan.hpp  m_suf_sort_scan_par.hpp  m_suf_sort_v2.hpp  m_suf_sort_v2_par.hpp  naive.hpp  nzSufSort.hpp  nzSufSort_par.hpp  parallel_sais.hpp  prefix_doubling.hpp  prefix_doubling_osipov.hpp  qsufsort.hpp  qsufsort_wrapper.hpp  register.cmake  register.cpp  register.cpp.in  sacak.hpp  sads.hpp  sais.hpp  (+1 more)
sacabench/saca/bucket_pointer_refinement/: bucketsort.hpp  insertionsort.hpp  ternary_quicksort.hpp
sacabench/saca/deep_shallow/: anchor_data.hpp  blind_trie.hpp  blind_tries.hpp  bucket_bounds.hpp  bucket_data.hpp  bucket_data_bb.hpp  log.hpp  parallel_saca_run.hpp  parameters.hpp  saca.hpp  saca_run.hpp  saca_run_parallel.hpp  saca_run_serial.hpp  saca_run_serial_big_buckets.hpp
sacabench/saca/deep_shallow/blind/: sort.hpp  trie.hpp
sacabench/saca/deep_shallow/blind_trie/: trie.hpp
sacabench/saca/div_suf_sort/: comparison_fct.hpp  induce.hpp  init.hpp  rms_sorting.hpp  saca.hpp  tmp.txt  utils.hpp
sacabench/saca/gsaca/: gsaca.hpp  gsaca_new.hpp  gsaca_parallel.hpp  gsize.hpp
sacabench/saca/osipov/: osipov.hpp  osipov_gpu.hpp  osipov_parallel.hpp  osipov_sequential.hpp
sacabench/saca/sais/: sais.hpp
sacabench/util/: ISAtoSA.hpp  alphabet.cpp  alphabet.hpp  assertions.hpp  bits.hpp  bucket_size.hpp  compare.hpp  container.hpp  example.cpp  heapsort.hpp  induce_parallel.hpp  induce_sa_dc.hpp  insert_lms.hpp  insertionsort.hpp  introsort.hpp  is_sorted.hpp  kd_array.hpp  macros.hpp  merge_sa_dc.hpp  prefix_sum.hpp  radixsort.hpp  read_text.hpp  ringbuffer.hpp  sa_check.hpp  saca.hpp  signed_size_type.hpp  sort.hpp  source_dir_constant.hpp.in  span.hpp  stacktrace.hpp  string.hpp  tagged_number.hpp  type_extraction.hpp  uint40.hpp  uint_types.hpp  word_packing.hpp
sacabench/util/sort/: binary_introsort.hpp  binary_quicksort.hpp  bucketsort.hpp  common.hpp  counting_sort.cpp  heapsort.hpp  insertionsort.hpp  introsort.hpp  ips4o.hpp  multikey_quicksort.cpp  multikey_quicksort.hpp  pss.hpp  radixsort_parallel.hpp  stable_sort.hpp  std_sort.hpp  ternary_quicksort.cpp  ternary_quicksort.hpp  tuple_sort.hpp
stats/: Test.txt  stat_plot.R
test/: CMakeLists.txt  alphabet_tests.cpp  assert_text_length.cpp  binary_introsort.cpp  binary_quicksort.cpp  bits_tests.cpp  bucket_pointer_refinement_parallel_tests.cpp  bucket_pointer_refinement_reference_tests.cpp  bucket_pointer_refinement_tests.cpp  bucket_size_tests.cpp  bucketsort_tests.cpp  compare_tests.cpp  construct_sa_tests.cpp  container_tests.cpp  cub_tests.cpp  dc3_lite_tests.cpp  divsufsort_tests.cpp  example_tests.cpp  external_qsufsort_test.cpp  gsaca_tests.cpp  heapsort_tests.cpp  induce_parallel_tests.cpp  insertsort_tests.cpp  introsort_tests.cpp  isa2sa_tests.cpp  kd_array.cpp  m_suf_sort_scan_tests.cpp  m_suf_sort_tests.cpp  merge_sa_dc_tests.cpp  msufsort_reference_tests.cpp  naive_tests.cpp  nzSufSort_tests.cpp  osipov_gpu_tests.cpp  osipov_tests.cpp  parallel_sais_tests.cpp  prefix_doubling_tests.cpp  prefix_sum_tests.cpp  pss_tests.cpp  radixsort_parallel_tests.cpp  radixsort_tests.cpp  (+38 more)
test/test/: saca.hpp  test_driver.cpp  testsuite.cmake
zbmessung/: abschluss_tex_gen.py  alphabet_size.py  automation.sh  benchmark.py  cli-config.ini  config_gpu_21_01_2019.json  config_parallel_16_01_2019.json  config_seq_11_02_2019.json  config_weak_parallel_16_01_2019.json  config_weak_seq_11_02_2019.json  example_launcher_config_large.json  example_launcher_config_parallel.json  example_launcher_config_small.json  example_launcher_config_weak_parallel.json  final-100gb-par-strong.json  final-100gb-par-weak.json  final-100gb-seq-weak.json  final-200mb-seq-none.json  json_to_result_converter.py  lido3_bash_profile.sh  lido3_launcher.py  lido_dashboard.py  merge_multiple_measures_for_repeats.py
zbmessung/abschluss-gen-script/: config.json  main.py  tex_gen_module.py
zbmessung/abschluss-gen-script/final-measure/: final-100gb-par-strong-results-combined.json  final-100gb-par-weak-results-combined.json
zbmessung/sqlplot/: .gitignore  json_to_result_converter.py  main.tex  main2.tex  makefile  phases.txt  plotconfig.json  plots.json  sqlplot.txt  stats3.txt
zbmessung/sqlplot/result/: result_algorithm.txt  result_phases.txt
zbmessung/sqlplot/sqlplot_weak_scaling/: json_to_result_converter.py  main.tex  makefile  plotconfig.json  plots.json.strong
zbmessung/sqlplot/sqlplot_weak_scaling/templates/: strongscale.tex  weakscale.tex
zbmessung/sqlplot/templates/: batch.tex  construct.tex  main.tex
zbmessung/sqlplot_scaling/: makefile  plotconfig.json.strong  plotconfig.json.weak  plots.json.weak
zbmessung/sqlplot_scaling/templates/: weakscale.tex
